k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-api
spec:
  selector:
    app: fast-api
  ports:
  - protocol: TCP
  - port: 80
    targetPort: 80
