k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fast-api
  labels:
    name: fast-api
spec:
  rules:
  - host: http://localhost
    http:
      paths:
      - pathType: Exact
        path: "/"
        backend:
          service:
            name: fast-api
            port: 
              number: 80
